Fixes and Enhancements since Version 0.5 alpha 2

 Changed, Enhanced, or Newly Deprecated Features

 - Added 'config.iterKeys()' which iterates over all available configuration
   keys in a given namespace (just property names for now).  The 'config:'
   namespace is now a 'naming.IReadContext', so you can navigate it with the
   'n2' command, and do things like 'ls -l config:peak.naming.schemes' to list
   all configured naming schemes.

 - Added 'config.parentProviding()' and 'config.parentsProviding()', which
   find the first (or all) parent components of a given component that support
   a given protocol.

 - Renamings/refactorings/deprecations in 'peak.config':

    'config.getProperty' -- use 'config.lookup()' instead

    'config.findUtility' -- use 'config.lookup()' instead

    'config.findUtilities' -- use 'config.iterValues()' instead

    'config.IPropertyMap' -- use 'config.IConfigMap' or 'config.IConfigurable'

    'config.PropertyMap' -- use 'config.ConfigMap' instead

    'config.setPropertyFor' -- DEPRECATED, see source for replacement code.

    'config.setRuleFor' -- DEPRECATED, see source for replacement code.

    'config.setDefaultFor' -- DEPRECATED, see source for replacement code.

    'config.instancePerComponent' -- DEPRECATED, use factories instead.

    'config.IConfigurationRoot' -- interface has changed; 'propertyNotFound' is
    no longer a method, and 'noMoreUtilities' is now 'noMoreValues'.

    'exceptions.PropertyNotFound' -- use 'exceptions.NameNotFound' instead.

    'exceptions.OutOfScope' -- REMOVED; it was not actually used in PEAK.

   In all cases, the old interface, class, or function is DEPRECATED and will
   go away in the alpha 4 release cycle.  Please take particular note of the
   fact that 'IConfigMap' offers virtually none of the convenience
   methods provided by 'IPropertyMap', so adjust your code accordingly.  Note
   also that even though there are plenty of references to 'IPropertyMap'